<resources>
    <string name="app_name">Movie app</string>
    <string name="movie_header_text">Movie header</string>
    <string name="language_text">Language</string>
    <string name="spoken_languages_text">Spoken languages:</string>
    <string name="runtime_text">Runtime:</string>
    <string name="release_date_text">Release date:</string>
    <string name="tagline_text">Tagline:</string>
    <string name="budget_text">Budget:</string>
    <string name="popularity_text">Popularity:</string>
    <string name="vote_count_text">Vote count:</string>
    <string name="vote_average_text">Vote average:</string>
    <string name="preferences_text">Preferences</string>
    <string name="a_language_selector_text">A language selector.</string>
    <string name="light_mode_text">Light mode</string>
    <string name="dark_mode_text">Dark mode</string>
    <string name="dark_mode_summary">Turn on dark mode for more comfortable reading at night.</string>
    <string name="app_appearance_text">App appearance</string>
    <string name="text_appearance_text">Text appearance</string>
    <string name="an_icon_of_a_filter">An icon of a filter.</string>
    <string name="search_movies">Search…</string>
    <string name="hours_and_text">hours and</string>
    <string name="minutes_text">minutes</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Nederlands</item>
        <item>Deutsch</item>
        <item>Français</item>
        <item>Español</item>
        <item>pусский</item>
    </string-array>
    <string-array name="languages_values">
        <item>en</item>
        <item>nl</item>
        <item>de</item>
        <item>fr</item>
        <item>es</item>
        <item>ru</item>
    </string-array>
    <string-array name="date_array">
        <item>2015–2022</item>
        <item>2010–2014</item>
        <item>2005–2009</item>
        <item>2000–2004</item>
        <item>1995–1999</item>
        <item>1990–1994</item>
        <item>1985–1989</item>
        <item>1980–1984</item>
        <item>1975–1979</item>
        <item>1970–1974</item>
        <item>1965–1969</item>
        <item>1960–1964</item>
        <item>1955–1959</item>
        <item>1950–1954</item>
    </string-array>
    <string-array name="rating_array">
        <item>0–1</item>
        <item>1–2</item>
        <item>2–3</item>
        <item>3–4</item>
        <item>4–5</item>
        <item>5–6</item>
        <item>6–7</item>
        <item>7–8</item>
        <item>8–9</item>
        <item>9–10</item>
    </string-array>
    <string name="language_summary" translatable="false">Language, Taal, Sprache, Langue, Idioma, Язык.</string>
    <string name="remove_list">Remove list</string>
    <string name="add_list_field_description">Description(Optional)</string>
    <string name="add_list_field_create">Create</string>
    <string name="add_list_field_list_name">List name</string>
    <string name="add_list_field_create_a_list">Create a list</string>
    <string name="add_movie_to_list_button_text">Add to list</string>

</resources>